--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,15 +13,15 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; /* You can change the background color */
+  background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; /* You can change the color of the handle */
+  background: #888; 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; /* You can change the color of the handle on hover */
+  background: #555; 
 }
